header component developed a bit, pic test pic added, page scroll issue found

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -19,7 +19,7 @@
     line-height: 1.7
 html 
     scroll-behavior: smooth
-    overflow-y: hidden
+    // overflow-y: hidden
 body 
     background-color: $clr-bg-basic
 @each $heading in $headings 
@@ -76,7 +76,7 @@ a
 +media($bp-tablet)
     section
         margin-top: 6rem
-        
+
 /* =============================== Mobile =============================== */
 +media($bp-tablet)
     section > h2
