--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -1,5 +1,6 @@
-@import './toolkit'
 
+/* ============================================================== IMPORTS ============================================================== */
+@import './toolkit'
 
 /* ============================================================== OVERALLS ============================================================== */
 * 
@@ -17,11 +18,18 @@
     font-weight: 300
     color: $clr-whitish
     line-height: 1.7
-html 
-    scroll-behavior: smooth
-    // overflow-y: hidden
-body 
-    background-color: $clr-bg-basic
+html
+    &
+        scroll-behavior: smooth
+        // scrollbar-removal
+        -ms-overflow-style: none
+        scrollbar-width: none
+    &::-webkit-scrollbar
+        display: none
+body
+    &
+        background-color: $clr-bg-basic
+        
 @each $heading in $headings 
     #{$heading}
         font-weight: 500
