useState is not a fn issue not solved; nav was worked on

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -141,7 +141,7 @@ a
         padding: 0.7rem 1.7rem
         z-index: 2
         position: fixed
-        +nonStaticHcentering(5.8rem)
+        +nonStaticHcentering(11rem)
         bottom: 2rem
         display: flex
         gap: 0.8rem
@@ -157,8 +157,8 @@ a
             font-size: 1.1rem
         +hocus
             background-color: $clr-blackish--glassy
-        &:active
-            background-color: $clr-bg-basic
+        &--active
+            background-color: $clr-whitish--glassy
             color: $clr-whitish
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
