smart navlinks solution delayed, simple links done

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -96,6 +96,8 @@ a
     font-size: .9rem
 
 /* =============================== Relative =============================== */
+/* ============== section-realative ============== */
+/* ============== section-realative ============== */
 .header
     &
         height: 100vh
@@ -158,7 +160,7 @@ a
         +hocus
             background-color: $clr-blackish--glassy
         &--active
-            background-color: $clr-whitish--glassy
+            background-color: $clr-whitish--glassier
             color: $clr-whitish
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
