--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -10,6 +10,7 @@ $clr-blackish: rgb(0, 0, 0)
 $clr-blackish--glassy: rgba($clr-blackish, .3)
 $clr-whitish: rgb(255, 255, 255)
 $clr-whitish--glassy: rgba($clr-whitish, .6)
+$clr-whitish--glassier: rgba($clr-whitish, .1)
 
 $clr-bg-basic: rgb(31, 31, 56)
 $clr-bg-extra: rgb(44, 44, 108)
