--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -182,6 +182,40 @@ a
             transform: rotate(0deg)
         +hocus 
             transform: rotate(10deg)
+    &__text-content
+    .text-content
+        &
+        &__cards
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+            gap: 1.5rem
+        &__about-card
+        .about-card
+            &
+                &
+                    background-color: $clr-bg-extra
+                    border: 1px solid transparent
+                    border-radius: 1rem
+                    padding: 2rem
+                    text-align: center
+                +hocus
+                    background-color: transparent
+                    border-color: $clr-primary-glassy
+            &__heading
+                color: $clr-whitish
+                font-size: .95rem
+            &__desc
+                color: $clr-whitish
+                font-size: .7rem
+                color: $clr-whitish--glassy
+            &__icon
+                color: $clr-primary
+                font-size: 1.4rem
+                margin-bottom: 1rem
+        &__about-desc
+            margin: 2rem 0px 2.6rem
+            color: $clr-whitish--glassy
+
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
 /* =============================== Tablets =============================== */
@@ -193,7 +227,16 @@ a
     /* ======= Distinct ======= */
 
     /* ======= Relative ======= */
-
+    .about-section
+        &__contents-wrapper
+            grid-template-columns: 1fr
+            gap: 0
+        &__img-outer-wrapper
+            width: 50%
+            margin: 2rem auto 4rem
+        .text-content
+            &__about-desc
+                margin: 1rem 0 1.5rem
 /* =============================== Mobile =============================== */
 +media($bp-mobile)
     /* ============== Overalls ============== */
@@ -209,3 +252,16 @@ a
     .header
         &__socials
             display: none
+    .about-section
+        &__img-outer-wrapper
+            width: 65%
+            margin: 0 auto 3rem
+        .text-content
+            &
+                text-align: center
+            &__about-desc
+                margin: 1.5rem 0
+            &__cards
+                grid-template-columns: 1fr 1fr
+                gap: 1rem
+        
