normal style names added

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -214,33 +214,37 @@ a
         &__about-desc
             margin: 2rem 0px 2.6rem
             color: $clr-whitish--glassy
-.experience__container
-    display: grid
-    grid-template-columns: 1fr 1fr
-    gap: 2rem
-.experience__container > article
-    background-color: $clr-bg-extra
-    padding: 2.4rem 5rem
-    border-radius: 2rem
-    border: 1px solid transparent
-.experience__container > article:hover
-        background: transparent
-        border-color: $clr-primary-glassy
-.experience__container > div h3
-    text-align: center
-    margin-bottom: 2rem
-    color: $clr-primary
-.experience__content
-    display: grid
-    grid-template-columns: 1fr 1fr
-    row-gap: 2rem
-.experience__details
-    display: flex
-    gap: 1rem
-.xp-item__icon
-    margin-top: 6px
-    color: $clr-primary
-
+.xp-section
+    &__contents-wrapper
+        display: grid
+        grid-template-columns: 1fr 1fr
+        gap: 2rem
+    .xp-card
+        &
+            &
+                background-color: $clr-bg-extra
+                padding: 2.4rem 5rem
+                border-radius: 2rem
+                border: 1px solid transparent
+            +hocus
+                background: transparent
+                border-color: $clr-primary-glassy
+            &__heading
+                text-align: center
+                margin-bottom: 2rem
+                color: $clr-primary
+            &__contents
+                display: grid
+                grid-template-columns: 1fr 1fr
+                row-gap: 2rem
+            &__xp-item
+            .xp-item
+                &
+                    display: flex
+                    gap: 1rem
+                &__icon
+                    margin-top: 6px
+                    color: $clr-primary
 
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
@@ -263,14 +267,17 @@ a
         .text-content
             &__about-desc
                 margin: 1rem 0 1.5rem
-    .experience__container
-        grid-template-columns: 1fr
-    .experience__container > div
-        width: 80%
-        padding: 2rem
-        margin: 0 auto
-    .experience__content
-        padding: 1rem
+    .xp-section
+        &
+        &__contents-wrapper
+            grid-template-columns: 1fr
+        .xp-card
+            &
+                width: 80%
+                padding: 2rem
+                margin: 0 auto
+            &__contents
+                padding: 1rem
 /* =============================== Mobile =============================== */
 +media($bp-mobile)
     /* ============== Overalls ============== */
@@ -298,8 +305,9 @@ a
             &__cards
                 grid-template-columns: 1fr 1fr
                 gap: 1rem
-    .experience__container
-        gap: 1rem
-    .experience__container > article
-        width: 100%
-        padding: 2rem 1rem
+    .xp-section
+        &__contents-wrapper
+            gap: 1rem
+        .xp-card
+            width: 100%
+            padding: 2rem 1rem
