--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -34,6 +34,7 @@ $bp-mobile: 600px
 
 /* =============================== Other =============================== */
 $headings: h1, h2, h3, h4, h5, h6
+$shadow-dark-slight: 0 2rem 1rem rgba(0, 0, 0, .1)
 
 /* ============================================================== MIXINS ============================================================== */
 /* =============================== Helpers =============================== */
