serices worked on

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -106,8 +106,6 @@ a
     background: $gradient-primary
     
 /* =============================== Relative =============================== */
-/* ============== section-realative ============== */
-/* ============== section-realative ============== */
 .header
     &
         height: 100vh
@@ -264,6 +262,24 @@ a
     padding: 2rem
     border-radius: 0 0 2rem 2rem
     box-shadow: $shadow-dark-slight
+    h3
+        color: $clr-bg-basic
+        font-size: 1rem
+        text-align: center
+.service__list
+    padding: 2rem
+    li
+        display: flex
+        gap: 1rem
+        margin-bottom: .8rem
+        color: $clr-whitish
+.service__list-icon
+    color: $clr-primary
+    margin-top: 2px
+.service-list p
+    font-size: .9rem
+
+
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
 /* =============================== Tablets =============================== */
