--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -159,6 +159,8 @@ a
         &--active
             background-color: $clr-whitish--glassier
             color: $clr-whitish
+
+/* ============== Sections ============== */
 .about-section
     &
     &__contents-wrapper
@@ -243,42 +245,43 @@ a
                 &__icon
                     margin-top: 6px
                     color: $clr-primary
-
-.services__container
-    display: grid
-    grid-template-columns: repeat(3, 1fr)
-    gap: 3rem
-.service
-    &
-        background-color: $clr-bg-extra
-        border-radius: 0 0 2rem 2rem
-        border: 1px solid $clr-primary
-        height: fit-content
-    +hocus
-        background-color: transparent
-        border-color: $clr-primary-glassy
-.service__head
-    background-color: $clr-primary
-    padding: 2rem
-    border-radius: 0 0 2rem 2rem
-    box-shadow: $shadow-dark-slight
-    h3
-        color: $clr-bg-basic
-        font-size: 1rem
-        text-align: center
-.service__list
-    padding: 2rem
-    li
-        display: flex
-        gap: 1rem
-        margin-bottom: .8rem
-        color: $clr-whitish
-.service__list-icon
-    color: $clr-primary
-    margin-top: 2px
-.service-list p
-    font-size: .9rem
-
+.services-section
+    &__inner-wrapper
+        display: grid
+        grid-template-columns: repeat(3, 1fr)
+        gap: 3rem
+    .service-card
+        &
+            &
+                background-color: $clr-bg-extra
+                border-radius: 0 0 2rem 2rem
+                border: 1px solid $clr-primary
+                height: fit-content
+            +hocus
+                background-color: transparent
+                border-color: $clr-primary-glassy
+        &__heading-wrapper
+            background-color: $clr-primary
+            padding: 2rem
+            border-radius: 0 0 2rem 2rem
+            box-shadow: $shadow-dark-slight
+        &__heading
+            color: $clr-bg-basic
+            font-size: 1rem
+            text-align: center
+    .service-desc-list
+        padding: 2rem
+    .service-desc-item
+        &
+            display: flex
+            gap: 1rem
+            margin-bottom: .8rem
+            color: $clr-whitish
+        &__icon
+            color: $clr-primary
+            margin-top: 2px
+        &__desc
+            font-size: .9rem
 
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
@@ -312,11 +315,13 @@ a
                 margin: 0 auto
             &__contents
                 padding: 1rem
-    .services__container
-        grid-template-columns: 1fr 1fr
-        gap: 2rem
-    .service
-        height: auto
+    .services-section
+        &__inner-wrapper
+            grid-template-columns: 1fr 1fr
+            gap: 2rem
+        .service-card
+            height: auto
+
 /* =============================== Mobile =============================== */
 +media($bp-mobile)
     /* ============== Overalls ============== */
@@ -350,7 +355,8 @@ a
         .xp-card
             width: 100%
             padding: 2rem 1rem
-    .services__container
-        grid-template-columns: 1fr
-        gap: 1.5rem
+    .services-section
+        &__inner-wrapper
+            grid-template-columns: 1fr
+            gap: 1.5rem
 /* === */
