--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -140,7 +140,7 @@ a
         padding: 0.7rem 1.7rem
         z-index: 2
         position: fixed
-        +nonStaticHcentering(11rem)
+        +nonStaticHcentering(10.5rem)
         bottom: 2rem
         display: flex
         gap: 0.8rem
@@ -282,7 +282,28 @@ a
             margin-top: 2px
         &__desc
             font-size: .9rem
-
+.portfolio__container
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    gap: 2.5rem
+.portfolio__item
+    background-color: $clr-bg-extra
+    padding: 1.3rem
+    border: 1px solid transparent
+    border-radius: 2rem
+    transition: $transition-basic
+.portfolio__item:hover
+    border-color: $clr-primary-glassy
+    background-color: transparent
+.portfolio__item-image
+    border-radius: 1.5rem
+    overflow: hidden
+.portfolio__item h3
+    margin: 1.2rem 0 2rem
+.portfolio__item-cta
+    display: flex
+    gap: 1rem
+    margin-bottom: 1rem
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
 /* =============================== Tablets =============================== */
@@ -321,7 +342,9 @@ a
             gap: 2rem
         .service-card
             height: auto
-
+    .portfolio__container
+        grid-template-columns: 1fr 1fr
+        gap: 1.2rem
 /* =============================== Mobile =============================== */
 +media($bp-mobile)
     /* ============== Overalls ============== */
@@ -359,4 +382,7 @@ a
         &__inner-wrapper
             grid-template-columns: 1fr
             gap: 1.5rem
+    .portfolio__container
+        grid-template-columns: 1fr
+        gap: 1rem
 /* === */
