--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -336,6 +336,46 @@ a
         &-pagination
             &-bullet
                  background-color: $clr-primary
+.tank.contact__container
+    width: 58%
+    display: grid
+    grid-template-columns: 30% 58%
+    gap: 12%
+.contact__options
+    display: flex
+    flex-direction: column
+    gap: 1.2rem
+.contact__option
+    background-color: $clr-bg-extra
+    padding: 1.2rem
+    border-radius: 1.2rem
+    gap: 1.2rem
+    text-align: center
+    border: 1px solid transparent
+.contact__option:hover
+    background-color: transparent
+    border-color: $clr-primary-glassy
+.contact__option-icon
+    font-size: 1.5rem
+    margin-bottom: .5rem
+.contact__option a
+    margin-top: .7rem   
+    display: inline-block
+    font-size: .8rem
+form
+    display: flex
+    flex-direction: column
+    gap: 1.2rem
+input, textarea
+    width: 100%
+    padding: 1.5rem
+    border-radius: .5rem
+    background-color: transparent
+    border: 2px solid $clr-primary-glassy
+    resize: none
+    color: $clr-whitish
+
+
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
 /* =============================== Tablets =============================== */
