--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -336,47 +336,50 @@ a
         &-pagination
             &-bullet
                  background-color: $clr-primary
-.tank.contacts-section
-    &
-        width: 58%
-        display: grid
-        grid-template-columns: 30% 58%
-        gap: 12%
-.contact__options
-    display: flex
-    flex-direction: column
-    gap: 1.2rem
-.contact__option
-    background-color: $clr-bg-extra
-    padding: 1.2rem
-    border-radius: 1.2rem
-    gap: 1.2rem
-    text-align: center
-    border: 1px solid transparent
-.contact__option:hover
-    background-color: transparent
-    border-color: $clr-primary-glassy
-.contact__option-icon
-    font-size: 1.5rem
-    margin-bottom: .5rem
-.contact__option a
-    margin-top: .7rem   
-    display: inline-block
-    font-size: .8rem
-form
-    display: flex
-    flex-direction: column
-    gap: 1.2rem
-input, textarea
-    width: 100%
-    padding: 1.5rem
-    border-radius: .5rem
-    background-color: transparent
-    border: 2px solid $clr-primary-glassy
-    resize: none
-    color: $clr-whitish
-
-
+.contacts-section
+    .contacts-content
+        &.tank
+            width: 58%
+            display: grid
+            grid-template-columns: 30% 58%
+            gap: 12%
+        &__contacts-list
+            display: flex
+            flex-direction: column
+            gap: 1.2rem
+        .contacts-item
+            &
+                &
+                    background-color: $clr-bg-extra
+                    padding: 1.2rem
+                    border-radius: 1.2rem
+                    gap: 1.2rem
+                    text-align: center
+                    border: 1px solid transparent
+                +hocus
+                    background-color: transparent
+                    border-color: $clr-primary-glassy
+            &__icon
+                font-size: 1.5rem
+                margin-bottom: .5rem
+                color: $clr-whitish
+            &__cta-btn
+                margin-top: .7rem   
+                display: inline-block
+                font-size: .8rem
+        .message-form
+            &
+                display: flex
+                flex-direction: column
+                gap: 1.2rem
+            &__field
+                width: 100%
+                padding: 1.5rem
+                border-radius: .5rem
+                background-color: transparent
+                border: 2px solid $clr-primary-glassy
+                resize: none
+                color: $clr-whitish
 /* ============================================================== RESPONSIVENESS ============================================================== */
 
 /* =============================== Tablets =============================== */
@@ -422,9 +425,11 @@ input, textarea
     .testimonials-section
         .contents-wrapper
             width: 60%
-    .tank.contacts-section
-        grid-template-columns: 1fr
-        gap: 2rem
+    .contacts-section
+        .contacts-content
+            &.tank
+                grid-template-columns: 1fr
+                gap: 2rem
 /* =============================== Mobile =============================== */
 +media($bp-mobile)
     /* ============== Overalls ============== */
@@ -472,6 +477,8 @@ input, textarea
         .review
             &__the-review
                 width: $w-sm-tank
-    .tank.ccontacts-section
-        width: $w-sm-tank
+    .contacts-section
+        .contacts-content
+            &.tank        
+                width: $w-sm-tank
 /* === */
