bg pattern tries

--- a/src/styles/overalls.sass
+++ b/src/styles/overalls.sass
@@ -28,7 +28,8 @@ html
 body
     &
         background-color: $clr-bg-basic
-        
+        background-size: 14px 14px
+        background-image: repeating-linear-gradient(45deg, rgba(44, 44, 107, 0.32) 0, rgba(44, 44, 107, 0.32) 1.4000000000000001px, #1f1f38 0, #1f1f38 50%)
 @each $heading in $headings 
     #{$heading}
         font-weight: 500
