--- a/src/styles/toolkit.sass
+++ b/src/styles/toolkit.sass
@@ -12,7 +12,7 @@ $clr-whitish: rgb(255, 255, 255)
 $clr-whitish--glassy: rgba($clr-whitish, .6)
 $clr-whitish--glassier: rgba($clr-whitish, .1)
 
-$clr-bg-basic: rgb(31, 31, 56)
+$clr-bg-basic: #1f1f38
 $clr-bg-extra: rgb(44, 44, 108)
 
 $clr-primary: rgb(77, 181, 255)
